{
  "version": 4,
  "terraform_version": "0.12.20",
  "serial": 14,
  "lineage": "b1f69f5e-8c8a-e9b6-9d33-bd7d530aff6f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "my-elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:920394549028:loadbalancer/my-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "my-elb-1203332646.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "my-elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "my-elb",
            "security_groups": [
              "sg-017784cbeb9563577"
            ],
            "source_security_group": "920394549028/elb",
            "source_security_group_id": "sg-017784cbeb9563577",
            "subnets": [
              "subnet-0080b5e4f36dd660d",
              "subnet-02fae2e55b18c25d3"
            ],
            "tags": {
              "Name": "my-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.elb-securitygroup",
            "aws_subnet.main-public-1",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:internet-gateway/igw-0f3c3360426974db9",
            "id": "igw-0f3c3360426974db9",
            "owner_id": "920394549028",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-05895bd79c4f65ff8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main-public",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-077d5a57f0557fd01",
            "owner_id": "920394549028",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f3c3360426974db9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-05895bd79c4f65ff8"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-1-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e913a3b84e284f23",
            "route_table_id": "rtb-077d5a57f0557fd01",
            "subnet_id": "subnet-0080b5e4f36dd660d"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main-public-2-a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eebbc1ed431a0e0f",
            "route_table_id": "rtb-077d5a57f0557fd01",
            "subnet_id": "subnet-02fae2e55b18c25d3"
          },
          "dependencies": [
            "aws_internet_gateway.main-gw",
            "aws_route_table.main-public",
            "aws_subnet.main-public-2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb-securitygroup",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:security-group/sg-017784cbeb9563577",
            "description": "security group for load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-017784cbeb9563577",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "elb",
            "name_prefix": "",
            "owner_id": "920394549028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "elb"
            },
            "timeouts": null,
            "vpc_id": "vpc-05895bd79c4f65ff8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myinstance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:security-group/sg-06a1b7bffa8e10a6f",
            "description": "security group for my instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a1b7bffa8e10a6f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-017784cbeb9563577"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myinstance",
            "name_prefix": "",
            "owner_id": "920394549028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "myinstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-05895bd79c4f65ff8"
          },
          "dependencies": [
            "aws_security_group.elb-securitygroup",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-0080b5e4f36dd660d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0080b5e4f36dd660d",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-1"
            },
            "vpc_id": "vpc-05895bd79c4f65ff8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-public-2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:subnet/subnet-02fae2e55b18c25d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-02fae2e55b18c25d3",
            "map_public_ip_on_launch": true,
            "owner_id": "920394549028",
            "tags": {
              "Name": "main-public-2"
            },
            "vpc_id": "vpc-05895bd79c4f65ff8"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:920394549028:vpc/vpc-05895bd79c4f65ff8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-007753cff569b75d0",
            "default_route_table_id": "rtb-0749161a16dedf40b",
            "default_security_group_id": "sg-0c32c908b0b9a2c6c",
            "dhcp_options_id": "dopt-1c903d7a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05895bd79c4f65ff8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0749161a16dedf40b",
            "owner_id": "920394549028",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}